# virtual-assistant-llm

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: first_event.jsonl  second_event.jsonl
src/: app.py  utils.py
